--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-webview": "9.4.0",
