--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
     "buffer": "^5.6.0",
+    "cors": "^2.8.5",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-document-picker": "~8.2.1",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.20",
     "native-base": "^2.13.12",
     "node": "^15.4.0",
+    "nodemailer": "^6.4.17",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
@@ -48,6 +50,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-skeleton-placeholder": "^3.0.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-webview": "9.4.0",
