--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-date-picker": "^3.2.7",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
