--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
+    "expo-linking": "^1.0.3",
     "expo-network": "~2.2.1",
     "expo-notifications": "~0.3.3",
     "expo-status-bar": "^1.0.2",
@@ -40,11 +41,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-date-picker": "^3.2.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-html-parser": "^0.1.0",
+    "react-native-htmlview": "^0.16.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-paper": "^4.0.1",
@@ -54,9 +56,7 @@
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
-    "react-native-svg-charts": "^5.4.0",
-    "react-native-webview": "9.4.0",
-    "rn-pdf-reader-js": "^4.1.1"
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
