--- a/package.json
+++ b/package.json
@@ -45,10 +45,8 @@
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-html-parser": "^0.1.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
@@ -59,7 +57,8 @@
     "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
     "babel-preset-expo": "~8.1.0",
     "react-native-bundle-visualizer": "^2.2.1"
   },
