--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "^1.0.2",
     "firebase": "^8.2.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "native-base": "^2.13.12",
     "node": "^15.4.0",
     "nodemailer": "^6.4.17",
@@ -57,8 +58,6 @@
     "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
     "babel-preset-expo": "~8.1.0",
     "react-native-bundle-visualizer": "^2.2.1"
   },
