--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "mobile-app",
     "slug": "touron",
-    "version": "1.0.1",
+    "version": "1.1.1",
     "orientation": "portrait",
     "icon": "./assets/playstore.png",
     "splash": {
@@ -16,7 +16,7 @@
     "ios": {
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
-      "buildNumber": "1.0.1",
+      "buildNumber": "1.1.1",
       "usesIcloudStorage": true,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to take photos to upload profile pictures.",
@@ -26,7 +26,7 @@
     },
     "android": {
       "package": "com.touron.travelapp",
-      "versionCode": 18,
+      "versionCode": 19,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json"
     },
@@ -37,7 +37,7 @@
     },
     "description": "",
     "androidStatusBar": {
-      "backgroundColor": "#C2185B",
+      "backgroundColor": "#FFF",
       "translucent": false
     }
   }
