--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/compat": "^5.1.28",
     "@react-navigation/drawer": "^5.8.4",
