--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mobile-app",
+    "name": "tour On",
     "slug": "touron",
     "version": "1.1.1",
     "orientation": "portrait",
@@ -26,10 +26,17 @@
     },
     "android": {
       "package": "com.touron.travelapp",
-      "versionCode": 19,
+      "versionCode": 20,
       "useNextNotificationsApi": true,
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "READ_INTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
+
     "assetBundlePatterns": ["./assets/*/*"],
 
     "web": {
