--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
-    "expo-file-system": "~9.0.1",
     "cors": "^2.8.5",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-file-system": "~9.0.1",
     "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
@@ -32,7 +32,7 @@
     "firebase": "^8.2.1",
     "moment": "^2.29.1",
     "native-base": "^2.13.12",
-    "node": "^15.4.0",
+    "node": "^15.10.0",
     "nodemailer": "^6.4.17",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -52,7 +52,8 @@
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
-    "react-native-svg-charts": "^5.4.0"
+    "react-native-svg-charts": "^5.4.0",
+    "sharp-cli": "^1.14.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
