--- a/app.json
+++ b/app.json
@@ -9,6 +9,10 @@
       "enabled": true
     },
 
+    "splash": {
+      "image": "./assets/playstore.png",
+      "resizeMode": "contain"
+    },
     "ios": {
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
@@ -21,10 +25,6 @@
       }
     },
     "android": {
-      "splash": {
-        "image": "./assets/logo.png",
-        "resizeMode": "contain"
-      },
       "enableDangerousExperimentalLeanBuilds": true,
       "package": "com.touron.travelapp",
       "versionCode": 23,
