--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-linear-gradient": "~8.2.1",
     "expo-network": "~2.2.1",
     "expo-notifications": "~0.3.3",
+    "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.2",
     "firebase": "^8.2.1",
     "moment": "^2.29.1",
