--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "~1.11.0",
-    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.6.1",
@@ -23,14 +22,9 @@
     "expo": "~38.0.8",
     "expo-app-loading": "^1.0.1",
     "expo-constants": "~9.1.1",
-    "expo-file-system": "~9.0.1",
     "expo-font": "~8.2.1",
-    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
-    "expo-network": "~2.2.1",
     "expo-notifications": "~0.3.3",
-    "expo-splash-screen": "^0.5.0",
-    "expo-status-bar": "^1.0.2",
     "firebase": "^8.2.1",
     "moment": "^2.29.1",
     "native-base": "^2.13.12",
@@ -54,8 +48,7 @@
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
-    "react-native-svg-charts": "^5.4.0",
-    "sharp-cli": "^1.14.1"
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
