--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
@@ -41,6 +42,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
