--- a/app.json
+++ b/app.json
@@ -1,21 +1,22 @@
 {
   "expo": {
-    "name": "tour On",
-    "slug": "touron",
-    "version": "1.2.1",
+    "scheme": "tour-on",
+    "name": "tour-on",
+    "slug": "tour-on",
+    "version": "1.3.2",
     "orientation": "portrait",
     "icon": "./assets/playstore.png",
     "updates": {
-      "enabled": true
-    },
-    "splash": {
-      "resizeMode": "contain",
-      "backgroundColor": "#FFF"
+      "enabled": false
     },
     "ios": {
+      "splash": {
+        "resizeMode": "cover",
+        "image": "./assets/Splash Screen/ios/splash.png"
+      },
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
-      "buildNumber": "1.2.1",
+      "buildNumber": "1.3.2",
       "usesIcloudStorage": false,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to take photos to upload profile pictures.",
@@ -24,9 +25,33 @@
       }
     },
     "android": {
+      "splash": {
+        "resizeMode": "cover",
+        "ldpi": "./assets/Splash Screen/android/drawable-ldpi/splash.png",
+        "mdpi": "./assets/Splash Screen/android/drawable-mdpi/splash.png",
+        "hdpi": "./assets/Splash Screen/android/drawable-hdpi/splash.png",
+        "xhdpi": "./assets/Splash Screen/android/drawable-xhdpi/splash.png",
+        "xxhdpi": "./assets/Splash Screen/android/drawable-xxhdpi/splash.png",
+        "xxxhdpi": "./assets/Splash Screen/android/drawable-xxxhdpi/splash.png"
+      },
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "tour-on"
+            }
+          ],
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
+        }
+      ],
       "enableDangerousExperimentalLeanBuilds": true,
       "package": "com.touron.travelapp",
-      "versionCode": 23,
+      "versionCode": 25,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json",
       "permissions": [
