--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
-    "cors": "^2.8.5",
     "expo": "~38.0.8",
     "expo-app-loading": "^1.0.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
+    "expo-linking": "~1.0.3",
     "expo-notifications": "~0.3.3",
-    "firebase": "^8.2.1",
+    "firebase": "^7.9.0",
     "moment": "^2.29.1",
     "native-base": "^2.13.12",
     "node": "^15.10.0",
-    "nodemailer": "^6.4.17",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
@@ -38,12 +37,10 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.7.0",
-    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-looped-carousel": "^0.1.13",
-    "react-native-paper": "^4.0.1",
+    "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
