--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "scheme": "tour-on",
     "name": "tour-on",
     "slug": "tour-on",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "orientation": "portrait",
     "icon": "./assets/playstore.png",
     "updates": {
@@ -16,7 +16,7 @@
       },
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
-      "buildNumber": "1.3.2",
+      "buildNumber": "1.3.3",
       "usesIcloudStorage": false,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to take photos to upload profile pictures.",
@@ -43,12 +43,15 @@
               "scheme": "tour-on"
             }
           ],
-          "category": ["BROWSABLE", "DEFAULT"]
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         }
       ],
       "enableDangerousExperimentalLeanBuilds": true,
       "package": "com.touron.travelapp",
-      "versionCode": 26,
+      "versionCode": 27,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json",
       "permissions": [
@@ -58,7 +61,9 @@
         "WRITE_EXTERNAL_STORAGE"
       ]
     },
-    "assetBundlePatterns": ["./assets/**"],
+    "assetBundlePatterns": [
+      "./assets/**"
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
