--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "scheme": "tour-on",
     "name": "tour-on",
-    "slug": "tour-on",
+    "slug": "touron",
     "version": "1.3.3",
     "orientation": "portrait",
     "icon": "./assets/playstore.png",
