--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "scheme": "tour-on",
-    "name": "tour-on",
+    "scheme": "touron",
+    "name": "tour On",
     "slug": "touron",
-    "version": "1.3.3",
+    "version": "1.3.4",
     "orientation": "portrait",
     "icon": "./assets/playstore.png",
     "updates": {
@@ -16,8 +16,9 @@
       },
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
-      "buildNumber": "1.3.3",
+      "buildNumber": "1.3.4",
       "usesIcloudStorage": false,
+      "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to take photos to upload profile pictures.",
         "NSPhotoLibraryAddUsageDescription": "This app uses photo bibrary to pick and save photos",
@@ -40,18 +41,15 @@
           "autoVerify": true,
           "data": [
             {
-              "scheme": "tour-on"
+              "scheme": "touron"
             }
           ],
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ]
+          "category": ["BROWSABLE", "DEFAULT"]
         }
       ],
       "enableDangerousExperimentalLeanBuilds": true,
       "package": "com.touron.travelapp",
-      "versionCode": 27,
+      "versionCode": 30,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json",
       "permissions": [
@@ -61,16 +59,10 @@
         "WRITE_EXTERNAL_STORAGE"
       ]
     },
-    "assetBundlePatterns": [
-      "./assets/**"
-    ],
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
+    "assetBundlePatterns": ["./assets/**"],
     "description": "",
     "androidStatusBar": {
-      "backgroundColor": "#FFF",
-      "translucent": false
+      "backgroundColor": "#FFF"
     }
   }
 }
