--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "scheme": "touron",
+    "scheme": "https",
     "name": "tour On",
     "slug": "touron",
     "version": "1.3.4",
@@ -14,6 +14,9 @@
         "resizeMode": "cover",
         "image": "./assets/Splash Screen/ios/splash.png"
       },
+      "associatedDomains": [
+        "applinks:com.touron.travelapp"
+      ],
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
       "buildNumber": "1.3.4",
@@ -41,7 +44,9 @@
           "autoVerify": true,
           "data": [
             {
-              "scheme": "touron"
+              "scheme": "https",
+              "host": "*.touron.in",
+              "pathPrefix": "/"
             }
           ],
           "category": [
