--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-linking": "~1.0.3",
     "expo-notifications": "~0.3.3",
     "firebase": "^7.9.0",
@@ -34,6 +35,7 @@
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-image-picker": "^4.0.3",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
