--- a/app.json
+++ b/app.json
@@ -14,9 +14,7 @@
         "resizeMode": "cover",
         "image": "./assets/Splash Screen/ios/splash.png"
       },
-      "associatedDomains": [
-        "applinks:com.touron.travelapp"
-      ],
+      "associatedDomains": ["applinks:com.touron.travelapp"],
       "bundleIdentifier": "com.touron.travelapp",
       "supportsTablet": false,
       "buildNumber": "1.3.4",
@@ -45,19 +43,15 @@
           "data": [
             {
               "scheme": "https",
-              "host": "*.touron.in",
-              "pathPrefix": "/"
+              "host": "www.touron.in"
             }
           ],
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ]
+          "category": ["BROWSABLE", "DEFAULT"]
         }
       ],
       "enableDangerousExperimentalLeanBuilds": true,
       "package": "com.touron.travelapp",
-      "versionCode": 30,
+      "versionCode": 32,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json",
       "permissions": [
@@ -67,9 +61,7 @@
         "WRITE_EXTERNAL_STORAGE"
       ]
     },
-    "assetBundlePatterns": [
-      "./assets/*/*"
-    ],
+    "assetBundlePatterns": ["./assets/**/*"],
     "description": "",
     "androidStatusBar": {
       "backgroundColor": "#FFF"
