--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-cli": "^4.7.2",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
