--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.4",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.6.1",
@@ -18,36 +18,36 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
-    "expo": "~38.0.8",
+    "expo": "^42.0.0",
     "expo-cli": "^4.7.2",
-    "expo-constants": "~9.1.1",
-    "expo-font": "~8.2.1",
-    "expo-image-picker": "~8.3.0",
-    "expo-linking": "~1.0.3",
-    "expo-notifications": "~0.3.3",
-    "firebase": "^7.9.0",
+    "expo-constants": "~11.0.1",
+    "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-linking": "~2.3.1",
+    "expo-notifications": "~0.12.2",
+    "firebase": "8.2.3",
     "moment": "^2.29.1",
     "native-base": "^2.13.12",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.7.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^4.0.3",
     "react-native-paper": "^4.8.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
+    "babel-preset-expo": "8.3.0",
     "react-native-bundle-visualizer": "^2.2.1"
   },
   "private": true
